it does work, but it sucks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 [dependencies]
 futures = { version = "0.3.1", features = ["compat", "io-compat"] }
 http = "0.1.19"
+futures-util = "0.3.1"
 
 # isahc-client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -53,4 +54,6 @@ features = [
     "Window",
 ]
 
+#https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/testing-your-project.html
 [dev-dependencies]
+wasm-bindgen-test = "0.2"
