--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,74 +1,74 @@
 [package]
-name = "http-client"
-version = "4.0.0"
-license = "MIT OR Apache-2.0"
-repository = "https://github.com/http-rs/http-client"
-documentation = "https://docs.rs/http-client"
-description = "Types and traits for http clients."
-keywords = ["http", "service", "client", "futures", "async"]
-categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::websocket"]
 authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>", "dignifiedquire <me@dignifiedquire.com>"]
-readme = "README.md"
+categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::websocket"]
+description = "Types and traits for http clients."
+documentation = "https://docs.rs/http-client"
 edition = "2018"
+keywords = ["http", "service", "client", "futures", "async"]
+license = "MIT OR Apache-2.0"
+name = "http-client"
+readme = "README.md"
+repository = "https://github.com/http-rs/http-client"
+version = "4.0.0"
 
 [package.metadata.docs.rs]
 features = ["docs"]
 rustdoc-args = ["--cfg", "feature=\"docs\""]
 
 [features]
+curl_client = ["isahc", "async-std"]
 default = ["h1_client"]
 docs = ["h1_client"]
 h1_client = ["async-h1", "async-std", "async-native-tls"]
-native_client = ["curl_client", "wasm_client"]
-curl_client = ["isahc", "async-std"]
-wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 hyper_client = ["hyper", "hyper-tls"]
+native_client = ["curl_client", "wasm_client"]
+wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 
 [dependencies]
-futures = { version = "0.3.1" }
-http-types = { version = "2.0.1", features = ["hyperium_http"] }
+futures = {version = "0.3.1"}
+http-types = "2.1.0"
 log = "0.4.7"
 
 # h1-client
-async-h1 = { version = "2.0.0", optional = true }
-async-std = { version = "1.6.0", default-features = false, optional = true }
-async-native-tls = { version = "0.3.1", optional = true }
+async-h1 = {version = "2.0.0", optional = true}
+async-native-tls = {version = "0.3.1", optional = true}
+async-std = {version = "1.6.0", default-features = false, optional = true}
 
 # reqwest-client
-hyper = { version = "0.13.6", features = ["tcp"], optional = true }
-hyper-tls = { version = "0.4.3", optional = true }
+hyper = {version = "0.13.6", features = ["tcp"], optional = true}
+hyper-tls = {version = "0.4.3", optional = true}
 
 # isahc-client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-isahc = { version = "0.9", optional = true, default-features = false, features = ["http2"]  }
+isahc = {version = "0.9", optional = true, default-features = false, features = ["http2"]}
 
 # wasm-client
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = { version = "0.3.25", optional = true }
-wasm-bindgen = { version = "0.2.48", optional = true }
-wasm-bindgen-futures = { version = "0.4.5", optional = true }
+js-sys = {version = "0.3.25", optional = true}
+wasm-bindgen = {version = "0.2.48", optional = true}
+wasm-bindgen-futures = {version = "0.4.5", optional = true}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-version = "0.3.25"
-optional = true
 features = [
-    "AbortSignal",
-    "Headers",
-    "ObserverCallback",
-    "ReferrerPolicy",
-    "Request",
-    "RequestCache",
-    "RequestCredentials",
-    "RequestInit",
-    "RequestMode",
-    "RequestRedirect",
-    "Response",
-    "Window",
-    "WorkerGlobalScope"
+  "AbortSignal",
+  "Headers",
+  "ObserverCallback",
+  "ReferrerPolicy",
+  "Request",
+  "RequestCache",
+  "RequestCredentials",
+  "RequestInit",
+  "RequestMode",
+  "RequestRedirect",
+  "Response",
+  "Window",
+  "WorkerGlobalScope",
 ]
+optional = true
+version = "0.3.25"
 
 [dev-dependencies]
-async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
+async-std = {version = "1.6.0", features = ["unstable", "attributes"]}
 portpicker = "0.1.0"
-tide = { version = "0.9.0" }
-tokio = { version = "0.2.21", features = ["macros"] }
+tide = {version = "0.9.0"}
+tokio = {version = "0.2.21", features = ["macros"]}
