--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ async-native-tls = {version = "0.3.1", optional = true}
 async-std = {version = "1.6.0", default-features = false, optional = true}
 
 # reqwest-client
+async-trait = "0.1.37"
 hyper = {version = "0.13.6", features = ["tcp"], optional = true}
 hyper-tls = {version = "0.4.3", optional = true}
 
