--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,25 +25,25 @@ native_client = ["curl_client", "wasm_client"]
 wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
 
 [dependencies]
-futures = {version = "0.3.1"}
-http-types = "2.3.0"
+async-trait = "0.1.37"
+futures = "0.3.1"
+http-types = {version = "2.3.0", features = ["hyperium_http"]}
 log = "0.4.7"
 
-# h1-client
+# h1_client
 async-h1 = {version = "2.0.0", optional = true}
 async-native-tls = {version = "0.3.1", optional = true}
 async-std = {version = "1.6.0", default-features = false, optional = true}
 
-# reqwest-client
-async-trait = "0.1.37"
+# hyper_client
 hyper = {version = "0.13.6", features = ["tcp"], optional = true}
 hyper-tls = {version = "0.4.3", optional = true}
 
-# isahc-client
+# curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 isahc = {version = "0.9", optional = true, default-features = false, features = ["http2"]}
 
-# wasm-client
+# wasm_client
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = {version = "0.3.25", optional = true}
 wasm-bindgen = {version = "0.2.48", optional = true}
