--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,12 @@ h1_client = ["async-h1", "async-std", "async-native-tls"]
 native_client = ["curl_client", "wasm_client"]
 curl_client = ["isahc", "async-std"]
 wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures"]
-hyper_client = ["hyper", "hyper-tls"]
+hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http"]
 
 [dependencies]
 async-trait = "0.1.37"
 futures = "0.3.1"
-http-types = { version = "2.3.0", features = ["hyperium_http"] }
+http-types = "2.3.0"
 log = "0.4.7"
 
 # h1_client
