--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ h1_client = ["async-h1", "async-std", "async-native-tls"]
 native_client = ["curl_client", "wasm_client"]
 curl_client = ["isahc", "async-std"]
 wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "futures"]
-hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http"]
+hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http", "futures-util"]
 
 [dependencies]
 async-trait = "0.1.37"
@@ -37,6 +37,7 @@ async-native-tls = { version = "0.3.1", optional = true }
 # hyper_client
 hyper = { version = "0.13.6", features = ["tcp"], optional = true }
 hyper-tls = { version = "0.4.3", optional = true }
+futures-util = { version = "0.3.5", optional = true }
 
 # curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
