Add 'h1_client_rustls' feature using 'async-tls' instead of 'async-native-tls'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rustdoc-args = ["--cfg", "feature=\"docs\""]
 default = ["h1_client"]
 docs = ["h1_client"]
 h1_client = ["async-h1", "async-std", "async-native-tls"]
+h1_client_rustls = ["async-h1", "async-std", "async-tls"]
 native_client = ["curl_client", "wasm_client"]
 curl_client = ["isahc", "async-std"]
 wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "futures"]
@@ -37,6 +38,9 @@ log = "0.4.7"
 async-h1 = { version = "2.0.0", optional = true }
 async-std = { version = "1.6.0", default-features = false, optional = true }
 async-native-tls = { version = "0.3.1", optional = true }
+
+# h1_client_rustls
+async-tls = { version = "0.10.0", optional = true }
 
 # hyper_client
 hyper = { version = "0.13.6", features = ["tcp"], optional = true }
@@ -76,5 +80,7 @@ features = [
 [dev-dependencies]
 async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
 portpicker = "0.1.0"
-tide = { version = "0.13.0" }
+tide = { version = "0.15.0" }
+tide-rustls = { version = "0.1.4" }
 tokio = { version = "0.2.21", features = ["macros"] }
+serde_json = "1.0"
