--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,4 +83,7 @@ portpicker = "0.1.0"
 tide = { version = "0.15.0" }
 tide-rustls = { version = "0.1.4" }
 tokio = { version = "0.2.21", features = ["macros"] }
+serde = "1.0"
 serde_json = "1.0"
+cfg-if = "0.1.10"
+mockito = "0.23.3"
