--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rustdoc-args = ["--cfg", "feature=\"docs\""]
 
 [features]
 default = ["h1_client"]
-docs = ["h1_client"]
+docs = ["h1_client", "curl_client", "wasm_client", "hyper_client"]
 h1_client = ["async-h1", "async-std", "async-native-tls"]
 h1_client_rustls = ["async-h1", "async-std", "async-tls"]
 native_client = ["curl_client", "wasm_client"]
