--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Types and traits for http clients."
 keywords = ["http", "service", "client", "futures", "async"]
 categories = ["asynchronous", "web-programming", "web-programming::http-client", "web-programming::websocket"]
 authors = [
-    "Yoshua Wuyts <yoshuawuyts@gmail.com>", 
+    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
     "dignifiedquire <me@dignifiedquire.com>",
     "Jeremiah Senkpiel <fishrock123@rocketmail.com>"
 ]
@@ -45,7 +45,7 @@ async-tls = { version = "0.10.0", optional = true }
 # hyper_client
 hyper = { version = "0.13.6", features = ["tcp"], optional = true }
 hyper-tls = { version = "0.4.3", optional = true }
-futures-util = { version = "0.3.5", optional = true }
+futures-util = { version = "0.3.5", features = ["io"], optional = true }
 
 # curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
