change: separate out tls feature flags
A successor to https://github.com/http-rs/http-client/pull/53, this separates out the tls feature flags, which should be nicer.

Fixes: https://github.com/http-rs/http-client/issues/54

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        backend: [h1_client, hyper_client, curl_client]
+        backend: ["h1_client,native-tls", hyper_client, curl_client]
 
     steps:
     - uses: actions/checkout@master
