--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,17 @@ features = ["docs"]
 rustdoc-args = ["--cfg", "feature=\"docs\""]
 
 [features]
-default = ["h1_client"]
+default = ["h1_client", "native-tls"]
 docs = ["h1_client", "curl_client", "wasm_client", "hyper_client"]
-h1_client = ["async-h1", "async-std", "async-native-tls", "deadpool", "futures"]
-h1_client_rustls = ["async-h1", "async-std", "async-tls", "deadpool", "futures"]
+
+h1_client = ["async-h1", "async-std", "deadpool", "futures"]
 native_client = ["curl_client", "wasm_client"]
 curl_client = ["isahc", "async-std"]
 wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "futures"]
 hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http", "futures-util"]
+
+native-tls = ["async-native-tls"]
+rustls = ["async-tls"]
 
 [dependencies]
 async-trait = "0.1.37"
