--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,8 @@ futures = { version = "0.3.8", optional = true }
 async-tls = { version = "0.10.0", optional = true }
 
 # hyper_client
-hyper = { version = "0.13.6", features = ["tcp"], optional = true }
-hyper-tls = { version = "0.4.3", optional = true }
+hyper = { version = "0.14.4", features = ["tcp", "client"], optional = true }
+hyper-tls = { version = "0.5.0", optional = true }
 futures-util = { version = "0.3.5", features = ["io"], optional = true }
 
 # curl_client
