--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ futures = { version = "0.3.8", optional = true }
 async-tls = { version = "0.10.0", optional = true }
 
 # hyper_client
-hyper = { version = "0.14.4", features = ["tcp", "client"], optional = true }
+hyper = { version = "0.14.4", features = ["tcp", "client", "stream", "http1", "http2"], optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
 futures-util = { version = "0.3.5", features = ["io"], optional = true }
 
@@ -89,7 +89,8 @@ async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
 portpicker = "0.1.0"
 tide = { version = "0.15.0", default-features = false, features = ["h1-server"] }
 tide-rustls = { version = "0.1.4" }
-tokio = { version = "0.2.21", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "time"] }
 serde = "1.0"
 serde_json = "1.0"
 mockito = "0.23.3"
+hyper = { version = "0.14.4", features = ["server"] }
