work in progress: Config
work in progress for the long requested and needed configuration

might end up being an unstable feature for a bit, not sure yet

Refs: https://github.com/http-rs/http-client/issues/61

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http", "futures-util"
 native-tls = ["async-native-tls"]
 rustls = ["async-tls"]
 
+unstable-config = []
+
 [dependencies]
 async-trait = "0.1.37"
 dashmap = "4.0.2"
