--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ wasm_client = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-futures", "fut
 hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http", "futures-util", "tokio"]
 
 native-tls = ["async-native-tls"]
-rustls = ["async-tls"]
+rustls = ["async-tls", "rustls_crate"]
 
 unstable-config = []
 
@@ -50,6 +50,7 @@ futures = { version = "0.3.8", optional = true }
 
 # h1_client_rustls
 async-tls = { version = "0.10.0", optional = true }
+rustls_crate = { version = "0.18", optional = true, package = "rustls" }
 
 # hyper_client
 hyper = { version = "0.13.6", features = ["tcp"], optional = true }
