--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,3 +97,7 @@ tokio = { version = "0.2.21", features = ["macros"] }
 serde = "1.0"
 serde_json = "1.0"
 mockito = "0.23.3"
+
+[dev-dependencies.getrandom]
+version = "0.2"
+features = ["js"]
