--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ hyper = { version = "0.13.6", features = ["tcp"], optional = true }
 hyper-tls = { version = "0.4.3", optional = true }
 futures-util = { version = "0.3.5", features = ["io"], optional = true }
 tokio = { version = "0.2", features = ["time"], optional = true }
+dyn-clone = "1.0.4"
+dyn-clonable = "0.9.0"
 
 # curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
