--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,14 +49,14 @@ deadpool = { version = "0.8.1", optional = true }
 futures = { version = "0.3.8", optional = true }
 
 # h1_client_rustls
-async-tls = { version = "0.10.0", optional = true }
-rustls_crate = { version = "0.18", optional = true, package = "rustls" }
+async-tls = { version = "0.11.0", optional = true }
+rustls_crate = { version = "0.19.1", optional = true, package = "rustls" }
 
 # hyper_client
-hyper = { version = "0.13.6", features = ["tcp"], optional = true }
-hyper-tls = { version = "0.4.3", optional = true }
+hyper = { version = "0.14.10", features = ["tcp", "client", "server", "http2", "stream"], optional = true }
+hyper-tls = { version = "0.5.0", optional = true }
 futures-util = { version = "0.3.5", features = ["io"], optional = true }
-tokio = { version = "0.2", features = ["time"], optional = true }
+tokio = { version = "1.8.1", features = ["time", "io-util"], optional = true }
 
 # curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -91,12 +91,12 @@ features = [
 [dev-dependencies]
 async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
 portpicker = "0.1.0"
-tide = { version = "0.15.0", default-features = false, features = ["h1-server"] }
-tide-rustls = { version = "0.1.4" }
-tokio = { version = "0.2.21", features = ["macros"] }
+tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
+tide-rustls = { version = "0.3.0" }
+tokio = { version = "1.8.1", features = ["macros"] }
 serde = "1.0"
 serde_json = "1.0"
-mockito = "0.23.3"
+mockito = "0.30.0"
 
 [dev-dependencies.getrandom]
 version = "0.2"
