--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,13 +51,13 @@ futures = { version = "0.3.15", optional = true }
 
 # h1_client_rustls
 async-tls = { version = "0.11.0", optional = true }
-rustls_crate = { version = "0.19.1", optional = true, package = "rustls" }
+rustls_crate = { version = "0.19.*", optional = true, package = "rustls" }
 
 # hyper_client
-hyper = { version = "0.14.10", features = ["tcp", "client", "server", "http2", "stream"], optional = true }
+hyper = { version = "0.14.10", features = ["tcp", "client", "http1", "http2", "stream"], optional = true }
 hyper-tls = { version = "0.5.0", optional = true }
 futures-util = { version = "0.3.15", features = ["io"], optional = true }
-tokio = { version = "1.8.1", features = ["time", "io-util"], optional = true }
+tokio = { version = "1.8.1", features = ["io-util"], optional = true }
 
 # curl_client
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
@@ -94,10 +94,11 @@ async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 portpicker = "0.1.1"
 tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
 tide-rustls = "0.3.0"
-tokio = { version = "1.8.1", features = ["macros"] }
+tokio = { version = "1.8.1", features = ["macros", "time"] }
 serde = "1.0.126"
 serde_json = "1.0.64"
 mockito = "0.30.0"
+hyper = { version = "0.14.10", features = ["server"] }
 
 [dev-dependencies.getrandom]
 version = "0.2.3"
