--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ rustdoc-args = ["--cfg", "feature=\"docs\""]
 
 [features]
 default = ["h1_client", "native-tls"]
-docs = ["h1_client", "curl_client", "wasm_client", "hyper_client", "unstable-config"]
+docs = ["h1_client", "curl_client", "wasm_client", "hyper_client"]
 
 h1_client = ["async-h1", "async-std", "deadpool", "futures"]
 native_client = ["curl_client", "wasm_client"]
@@ -32,7 +32,7 @@ hyper_client = ["hyper", "hyper-tls", "http-types/hyperium_http", "futures-util"
 native-tls = ["async-native-tls"]
 rustls = ["async-tls", "rustls_crate"]
 
-unstable-config = []
+unstable-config = [] # deprecated
 
 [dependencies]
 async-trait = "0.1.37"
