--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,4 +80,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --target wasm32-unknown-unknown --no-default-features --features "native_client,wasm_client"
+          args: --target wasm32-unknown-unknown --no-default-features --features wasm-client
